@@ -1,8 +1,5 @@
 #! /bin/sh
 
-(cd tools/bind/hwloc/hwloc && ./autogen.sh)
-(cd tools/bind/plpa/plpa && ./autogen.sh)
-
 if [ -n "$MPICH2_AUTOTOOLS_DIR" ] ; then
     libtoolize=${MPICH2_AUTOTOOLS_DIR}/libtoolize
     autoreconf=${MPICH2_AUTOTOOLS_DIR}/autoreconf
@@ -12,6 +9,8 @@ else
 fi
 
 (cd mpl && $autoreconf -vif)
+(cd tools/bind/hwloc/hwloc && $autoreconf -vif)
+(cd tools/bind/plpa/plpa && $autoreconf -vif)
 $autoreconf -vif
 
 # Remove the autom4te.cache folders for a release-like structure.
