@@ -16,7 +16,7 @@ release=1
 # requirement is that it must be entirely printable ASCII characters
 # and have no white space.
 
-greek=rc1
+greek=rc3
 
 # If want_svn=1, then the SVN r number will be included in the overall
 # hwloc version number in some form.
